// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handles GROWTH_SEEN_GLOBAL_INTRO when not seen 1`] = `
Object {
  "hasSeenGlobalIntro": false,
  "skippedIntroductions": Array [],
}
`;

exports[`handles GROWTH_SEEN_GLOBAL_INTRO when seen 1`] = `
Object {
  "hasSeenGlobalIntro": true,
  "skippedIntroductions": Array [],
}
`;
